# study-env-ai

./: Dockerfile  LICENSE  README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: uv-lock.yml
