[project]
name = "study-env-ai"
version = "1.0.0"
description = "Study Planner OpenEnv - real-world AI agent training environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "python-multipart==0.0.20",
    "openenv-core[core]>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["inference.py", "openenv.yaml", "baseline_agent.py", "server/"]

[tool.uv]
dev-dependencies = []
